pagina de login com registro

--- a/estilo/login.css
+++ b/estilo/login.css
@@ -193,3 +193,12 @@ nav > a:hover{
         width: 90%;
     }
 }
+
+.painel-login > a{
+    text-decoration: none;
+    color: #77ffc0;
+    padding: 5px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 50px;
+}
