--- a/estilo/cadastro.css
+++ b/estilo/cadastro.css
@@ -129,6 +129,21 @@ a{
     box-shadow: 0px 10px 40px -12px #00ff8052;
 }
 
+nav{
+    margin: 10px;
+    display: flex;
+}
+
+nav > a{
+    text-decoration: none;
+    color: #77ffc0;
+    padding: 5px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+nav > a:hover{
+    background-color: #2f2841;
+}
 
 @media only screen and (max-width: 950px){
     .card-cadastro{
