--- a/estilo/cadastro.css
+++ b/estilo/cadastro.css
@@ -35,7 +35,7 @@
 }
 
 body{
-    background: var(--cor17);
+    background: var(--cor14);
     font-family: 'Noto Sans', sans-serif;
 }
 
@@ -51,16 +51,16 @@ a{
     padding: 5px;
     border-radius: 5px;
     font-weight: bold;
-    font-size: 50px;
+    font-size: 30px;
 }
 
 .cadastro{
     margin: auto;
-    width: 100%;
+    width: 50%;
 }
 
 .painel-cadastro{
-        background-color: #201b2c;
+        background-color: var(--cor14);
         display: flex;
         justify-content: center;
         align-items: center;
