--- a/estilo/login.css
+++ b/estilo/login.css
@@ -35,7 +35,7 @@
 }
 
 body{
-    background: #201b2c;
+    background: var(--cor14);
     font-family: 'Noto Sans', sans-serif;
     color: white;
     margin: 0;
@@ -66,7 +66,7 @@ nav > a:hover{
 .painel-login{
     width: 100vw;
     height: 100vh;
-    background-color: #201b2c;
+    background-color: var(--cor14);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -88,6 +88,11 @@ nav > a:hover{
     margin-top: -40px;
 }
 
+
+.esquerda-login > a:hover{
+    text-decoration: dashed;
+}
+
 .esquerda-login-image{
     width: 35vw;
 }
@@ -100,6 +105,11 @@ nav > a:hover{
     align-items: center;
 }
 
+a{
+   color:#00ff88;
+    text-decoration: none;
+}
+
 .card-login{
     width: 60%;
     display: flex;
@@ -107,7 +117,7 @@ nav > a:hover{
     align-items: center;
     flex-direction: column;
     padding: 30px 35px;
-    background: #2f2841;
+    background: var(--cor19);
     border-radius: 20px;
     box-shadow: 0px 10px 40px #00000056;
 }
