--- a/estilo/perfilEstilo.css
+++ b/estilo/perfilEstilo.css
@@ -121,10 +121,15 @@ a{
 
 nav{
     margin: 10px;
+     margin: 10px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 nav > a{
+    font-size: 25px;
     text-decoration: none;
     color: #77ffc0;
     padding: 5px;
