--- a/estilo/produtosEstilo.css
+++ b/estilo/produtosEstilo.css
@@ -61,18 +61,23 @@ label{
     color: white;
 }
 
-a{
+header >a{
     text-decoration: none;
     color: #77ffc0;
-    padding: 5px;
+    padding: 15px;
     border-radius: 5px;
     font-weight: bold;
     font-size: 30px;
 }
 
+
+
 nav{
-    margin: 10px;
-    display: flex;
+    font-size: 25px;
+    display: flex;    
+    justify-content: flex-end;
+    padding-bottom: 50px;
+
 }
 
 nav > a{
@@ -81,6 +86,7 @@ nav > a{
     padding: 5px;
     border-radius: 5px;
     font-weight: bold;
+    padding-right: 15px;
 }
 nav > a:hover{
     background-color: #2f2841;
@@ -94,6 +100,8 @@ nav > a:hover{
     text-align: center;
     border-radius: 5px;
     
+    margin: 2px;
+    
     max-width: 210px;
 }
 .produto>img{
@@ -103,11 +111,15 @@ nav > a:hover{
     margin: 2px 0px;
 }
 .produto_nome{
-    font-size: 25px;
+    font-size: 15px;
 }
 .produto_valor{
-    font-size: 20px;
+    font-size: 15px;
 }
 .produto_vendedor{
-    font-size: 15px;
+    font-size: 11px;
+}
+
+.{
+    border-radius: 25px;
 }
