--- a/estilo/orcamentosListaEstilo.css
+++ b/estilo/orcamentosListaEstilo.css
@@ -19,7 +19,7 @@ body{
     padding: 5px 10px;
     border-radius: 5px;
     
-    background-color: var(--roxoFG);
+    background-color: var(--FG);
     color: white;
     
     text-align: center;
