--- a/estilo/produtosEstilo.css
+++ b/estilo/produtosEstilo.css
@@ -11,7 +11,7 @@
     left: 0px;
     top: 0px;
     
-    background-color: var(--roxoFG);
+    background-color: var(--FG);
     color: white;
     
     text-align: center;
@@ -60,7 +60,7 @@
     margin: 2px;
     border-radius: 5px;
     
-    background-color: var(--roxoFG);
+    background-color: var(--FG);
     
     text-align: center;
     vertical-align: bottom;
@@ -79,7 +79,7 @@
     margin: 15px;
     border-radius: 5px;
     
-    background-color: var(--roxoFG);
+    background-color: var(--FG);
     
     width: 50%;
     height: 50%;
